# schnettriple

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.md  requirements.txt  setup.cfg
docs/: howtouse_schetanalysis.md  schnetanal.md  version_info.md
src/schnettriple/: __init__.py  __version__.py
src/schnettriple/analysis/: analysis.py
src/schnettriple/data/: loader.py
src/schnettriple/nn/: __init__.py  angular.py  base.py  cfconv.py  cutoff.py  mapping.py  neighbors.py  output.py  tripledistances.py
src/schnettriple/representation/: __init__.py  schnettriple.py
src/schnettriple/train/: trainer.py
src/schnettriple/train/hooks/: stop.py
src/schnettriple/utils/: __init__.py  data.py  evaluation.py  model.py  parsing.py  poscar.py  script_utils.py  training.py
src/scripts/: args.json  args_triple_train.json  eval.json  snt_run  snt_run.py  train.json
