[metadata]
name = schnettriple
version = attr: src.VERSION
author = Kento Nishio
author_email = ken2403.pmtdg@gmail.com
description = SchNetTriple - The new Deep Neural Networks that improves SchNet by adding effects of three bodies interactions.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/ken2403/schnettriple


[options]
python_requires = >=3.6
package_dir =
    = src
packages = find:
scripts =
    src/scripts/snt_run.py
install_requires =
    torch >= 1.7
    numpy
    ase >= 3.21
    schnetpack
    h5py
    tensorboardX
    tqdm
    pyyaml


[options.extras_require]
test =
    pytest
    sacred
    pytest-console-scripts
    pytest-datadir
