[metadata]
name = schnettriple
version = attr: schnettriple.__version__.__version__
author = Kento Nishio
author_email = ken2403.pmtdg@gmail.com
description = SchNetTriple - SchNetTriple - SchNet with three-body interaction.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ken2403/schnettriple
license = MIT

[options]
zip_safe = False
python_requires = >=3.6
package_dir=
    =src
packages=find:
scripts =
    src/scripts/snt_run.py
install_requires =
    torch>=1.7
    numpy
    matplotlib
    ase>=3.21
    schnetpack
    h5py
    tensorboardX
    tqdm
    pyyaml

[options.packages.find]
where=src

[options.extras_require]
test =
    pytest
    sacred
    pytest-console-scripts
    pytest-datadir
